--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Kittens For Work Options!</title>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+	<script type="text/javascript" src="src/jquery.min.js"></script>
 
 	<script type="text/javascript" src="src/class.js"></script>
 	<script type="text/javascript" src="src/options.js"></script>
@@ -10,39 +10,50 @@
 	<script type="text/javascript">
 
 		var options = new Options();
+		var range_values = {
+			0: "No kittens ever :'(",
+			1: "A small number of kittens",
+			2: "Few kittens",
+			3: "Some kittens",
+			4: "A moderate number of kittens",
+			5: "LOTS of kittens!",
+			6: "I NEVER WANT TO SEE ANYTHING BUT KITTENS AGAIN :D"
+		};
 
 		function loadOptions() {
-			$('input[name="mode"][value="' + options.mode() + '"]').attr('checked', 'checked');
+			var s = options.strength();
+			updateRangeText(s);
+			$('input[name="strength"]').val(parseInt(s));
+
 		}
 
 		function saveOptions() {
-			options.save($('input[name="mode"]:checked').val());
+			options.save({
+				strength: $('input[name="strength"]').val()
+			});
+
+			// Notify of options update
+			chrome.extension.sendRequest({options: {strength: options.strength()}}, function(r){});
 		}
 
-		function show(name) {
-			return;
-			var hide = (name == 'whitelist') ? 'blacklist' : 'whitelist';
-			$('#' + name).show();
-			$('#' + hide).hide();
+		function updateRangeText(value) {
+			$('#range-text').text(range_values[value]);
 		}
 
-		function add(name) {
-			var ul = $('#' + name);
-			ul.append('<li><input type="text" /></li>');
-		}
-
-		$(function() {loadOptions();});
+		$(function() {
+			loadOptions();
+		});
 	</script>
 </head>
 <body>
 
-<strong>How should KFW work?</strong>
-<label><input type="radio" name="mode" value="w" onclick="show('whitelist');" /> Whitelist</label>
-<ul id="whitelist" style="display:none;"><li><a href="javascript:add('whitelist')">+ Add</a></li></ul>
+	<h1>Kittens For Work!</h1>
+	<h2>How many kittens do you want to see?</h2>
+	<div>
+		<input type="range" name="strength" min="0" max="6" onchange="updateRangeText(this.value);" />
+		<span id="range-text"></span>
+	</div>
 
-<label><input type="radio" name="mode" value="b" onclick="show('blacklist');" /> Blacklist</label>
-<ul id="blacklist" style="display:none;"><li><a href="javascript:add('blacklist')">+ Add</a></li></ul>
-
-<button onclick="saveOptions();">Save</button>
+	<button onclick="saveOptions();">Save</button>
 </body>
 </html>
